Separating connection parameters

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 quarkus.datasource."datasource1".db-kind=mssql
-
-quarkus.datasource."datasource1".reactive.url=sqlserver://sa:RPSsql12345@localhost:1433/fruitdb
+quarkus.datasource."datasource1".username=sa
+quarkus.datasource."datasource1".password=RPSsql12345
+quarkus.datasource."datasource1".reactive.url=sqlserver://localhost:1433/fruitdb
